Boddy padding edited and flex-wrap activated

--- a/LMSGI/T6/P2/css/styles.css
+++ b/LMSGI/T6/P2/css/styles.css
@@ -1,6 +1,7 @@
 body {
     border: solid;
-    padding-left: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
     padding-top: 1%;
 }
 .navbar {
@@ -8,9 +9,12 @@ body {
     gap: 10px;
     background-color: #06268a;
     padding: 15px 15px 0px 15px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 .navbar a {
     background-color: #3655b3;
     padding: 8px 15px 5px 15px;
     color: #fff;
+
 }
