--- a/LMSGI/T6/P2/css/styles.css
+++ b/LMSGI/T6/P2/css/styles.css
@@ -4,6 +4,9 @@ body {
     padding-right: 15%;
     padding-top: 1%;
 }
+.content {
+    border: solid blue 2px;
+}
 .navbar {
     display: flex;
     gap: 10px;
@@ -21,6 +24,7 @@ body {
 .container {
     display: flex;
     gap: 10px;
+    margin-left: 2%;
 }
 .cards {
     width: 75%;
@@ -29,7 +33,39 @@ body {
     gap:10%;
 }
 .article-title {
-    padding: 1%;
+    padding: 1% 1% 1% 2%;
     font-size: 2em;
     background-color: #eb8034;
+    margin-bottom: 0px;
+    text-decoration: underline;
+    color:#06268a;
+    font-weight: lighter;
+}
+.article-options{
+    display: flex;
+    gap: 20px;
+    margin-top: 2%;
+    margin-left: 3%;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    color: #5571c4;
+    border-bottom: #5571c4 solid 1px;
+}
+.cards p {
+    margin-left: 3%;
+    color: #06268a;
+}
+.article-options a {
+    margin-left: 3%;
+    color: #06268a;
+    text-decoration: underline;
+}
+.seguir-leyendo {
+    margin-left: 3%;
+    color: #06268a;
+    text-decoration: underline;
+}
+.footer {
+    margin: 3%;
+    color: #5571c4;
 }
