Empty text wont be added
If the user added empty text, the program will tell him that there's no text to be added.

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/css/styles.css
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/css/styles.css
@@ -3,12 +3,24 @@ body {
     padding: 0px;
     border: 0px;
 }
+ul {
+    list-style-type: none;
+}
+h1 {
+    margin-bottom: 0%;
+}
 
 
 .to_do_list_cont {
-    margin-top: 5%;
+    border: 5px solid;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
+    
 }
+
+
 
