Just line-through the to_do_label

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/css/styles.css
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/css/styles.css
@@ -9,7 +9,12 @@ ul {
 h1 {
     margin-bottom: 0%;
 }
-
+.to_do_label:hover {
+    text-decoration: line-through;
+}
+.trash_label:hover{
+    font-style: italic;
+}
 
 .to_do_list_cont {
     border: 5px solid;
@@ -21,6 +26,8 @@ h1 {
     align-items: center;
     
 }
+
+
 
 
 
